# MyStrokeAPI

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
MyStroke_model/: fingerprint.pb  saved_model.pb
MyStroke_model/variables/: variables.data-00000-of-00001  variables.index
src/mystroke_api/: main.py  test.py
