[project]
name = "mystroke-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TK17250", email = "TXK285@gmail.com" }
]
dependencies = [
    "tensorflow>=2.16.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "mediapipe>=0.10.14",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mystroke_api"]
